--- a/index.html
+++ b/index.html
@@ -63,16 +63,16 @@
 
    <section class="hobby">
       <div class="html">
-         <img src="/img/logo_HTML.png" alt="" class="html">
+         <img src="img/logo_HTML.png" alt="" class="html">
       </div>
       <div class="css">
-         <img src="/img/css3.svg" alt="" class="css">
+         <img src="img/css3.svg" alt="" class="css">
       </div>
       <div class="js">
-         <img src="/img/javascript.svg" alt="" class="js">
+         <img src="img/javascript.svg" alt="" class="js">
       </div>
       <div class="sass">
-         <img src="/img/logo_Sass.png" alt="" class="sass">
+         <img src="img/logo_Sass.png" alt="" class="sass">
       </div>
    </section>
 
