--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
          <img src="img/javascript.svg" alt="" class="js">
       </div>
       <div class="sass">
-         <img src="img/logo_Sass.png" alt="" class="sass">
+         <img src="img/logo_Sass.png" alt="hm" class="sass">
       </div>
    </section>
 
