--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
          <img src="img/logo_Sass.png" alt="hm" class="sass">
       </div>
    </section>
+   <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum hic rerum architecto reiciendis numquam illo
+      necessitatibus! Ut, impedit incidunt iure, eum dolor sunt recusandae quo praesentium quasi, molestiae laudantium
+      nisi?</p>
 
 
    <section class="other"> Strona w budowie ....
