--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
 
 <body>
    <header>
+      <nav class="nawigacja">
+         <li>
+            <ul>Menu</ul>
+            <ul>Kontakt</ul>
+         </li>
+      </nav>
       <img class="slider" src="img/laptop.jpg">
       <div class="start"><span class="text"></span><span class="cursor">|</span></div>
    </header>
