--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
 <body>
    <header>
       <nav class="nawigacja">
-         <li>
-            <ul>Menu</ul>
-            <ul>Kontakt</ul>
-         </li>
+         <ul>
+            <li> <a href="#" class="about-me">O mnie</a> </li>
+            <li> <a href="#" class="contact">Kontakt</a> </li>
+         </ul>
       </nav>
       <img class="slider" src="img/laptop.jpg">
       <div class="start"><span class="text"></span><span class="cursor">|</span></div>
    </header>
 
-   <section class="about-me clearfix">
+   <section data-section="about-me" id="about-me" class="about-me clearfix">
       <h1> O mnie </h1>
       <div class="name">
          <img class="photo" src="img/myfacemin.jpg" alt="">
@@ -32,7 +32,7 @@
       </div>
 
       <div class="name-test">
-         <p class="texts">Witam na mojej stronie. Mam na imię Kamil. Jestem początkującym (Juniorem) Front-end
+         <p class="texts">Witam wszystkim ;)  Jestem początkującym (Juniorem) Front-end
             Developerem. Dzięki kursu zdobyłem doświadczenia dotyczących tworzenia stron internetowych w oparciu o
             technologie HTML5, CSS3 i JavaScript. </p>
       </div>
@@ -89,6 +89,7 @@
    <section class="other"> Strona w budowie ....
    </section>
    <footer></footer>
+   <script src="jq.js"></script>
    <script src="main.js"></script>
 </body>
 
