--- a/index.html
+++ b/index.html
@@ -109,6 +109,9 @@
         <div class="facebook">
           <i class="fab fa-facebook">Facebook</i>
         </div>
+        <div class="phone">
+          <i>+48 882 175 542</i>
+        </div>
       </div>
     </footer>
     <article>2019 &copy; Kamil Delimat</article>
