--- a/index.html
+++ b/index.html
@@ -44,10 +44,8 @@
       </div>
     </section>
 
-<<<<<<< HEAD
-    <section class="hobby">
+    <!-- <section class="hobby">
       <div class="html">
-<<<<<<< HEAD
          <img src="img/logo_HTML.png" alt="" class="html">
       </div>
       <div class="css">
@@ -58,7 +56,7 @@
       </div>
       <div class="sass">
          <img src="img/logo_Sass.png" alt="hm" class="sass">
-      </div>
+      </div> -->
    </section>
    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum hic rerum architecto reiciendis numquam illo
       necessitatibus! Ut, impedit incidunt iure, eum dolor sunt recusandae quo praesentium quasi, molestiae laudantium
@@ -71,20 +69,6 @@
    <script src="jq.js"></script>
    <script src="main.js"></script>
 </body>
-=======
-        <img src="/img/logo_HTML.png" alt="" class="html" />
-      </div>
-      <div class="css">
-        <img src="/img/css3.svg" alt="" class="css" />
-      </div>
-      <div class="js">
-        <img src="/img/javascript.svg" alt="" class="js" />
-      </div>
-      <div class="sass">
-        <img src="/img/logo_Sass.png" alt="" class="sass" />
-      </div>
-    </section>
->>>>>>> copmmit
 =======
     <!-- <section class="hobby">
       <div class="tab-hobby">
