--- a/index.html
+++ b/index.html
@@ -57,21 +57,17 @@
       <div class="sass">
          <img src="img/logo_Sass.png" alt="hm" class="sass">
       </div> -->
-   </section>
-   <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum hic rerum architecto reiciendis numquam illo
-      necessitatibus! Ut, impedit incidunt iure, eum dolor sunt recusandae quo praesentium quasi, molestiae laudantium
-      nisi?</p>
-
-    <footer class="cont">
-      <div class="social">
-        <div class="facebook">
-          <i class="fab fa-facebook">Facebook</i>
-        </div>
-        <div class="phone">
-          <i>+48 882 175 542</i>
-        </div>
+    </section>
+     <footer class="cont">
+      <div class="kontakty">
+         <div class="icony">
+            <img src="/img/facebook.png" alt="" srcset="facebook">
+            <!-- <span>Facebook</span> -->
+         </div>
       </div>
-    </footer>
+      
+   </footer>
+
     <article>2019 &copy; Kamil Delimat</article>
     <script src="jq.js"></script>
     <script src="main.js"></script>
