--- a/index.html
+++ b/index.html
@@ -61,19 +61,19 @@
      <footer class="cont">
       <div class="kontakty clearfix">
          <div class="icony clearfix">
-            <img src="/img/facebook.png" alt="" srcset="">
+            <img src="img/facebook.png" alt="" srcset="">
             <span><a href="https://www.facebook.com/0920kamil">Facebook</a></span>
          </div>
          <div class="icony">
-            <img src="/img/gmail.png" alt="" srcset="">
+            <img src="img/gmail.png" alt="" srcset="">
             <span> kamildel@gmail.com</span>
          </div>
          <div class="icony">
-            <img src="/img/github.png" alt="" srcset="">
+            <img src="img/github.png" alt="" srcset="">
             <span><a href="https://github.com/kamdel"> GitHub</a></span>
          </div>
          <div class="icony">
-            <img src="/img/linkedin.png" alt="" srcset="">
+            <img src="img/linkedin.png" alt="" srcset="">
             <span><a href="https://www.linkedin.com/in/kamildelimat/"> LinkedIn</a></span>
          </div>
       </div>
